--- a/templates/landingpage/index.html
+++ b/templates/landingpage/index.html
@@ -12,10 +12,10 @@
     <title>Cover Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="{% static 'bootstrap.min.css' %}"rel="stylesheet">
+    <link href="{% static '/landingpage/bootstrap.min.css' %}"rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="{% static 'landingcover.css' %}"rel="stylesheet">
+    <link href="{% static '/landingpage/landingcover.css' %}"rel="stylesheet">
   </head>
 
   <body>
@@ -64,7 +64,7 @@
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-    <script src="{% static 'bootstrap.min.js' %}"></script>
+    <script src="{% static '/js/bootstrap.min.js' %}"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
   </body>
 </html>
