--- a/templates/landingpage/index.html
+++ b/templates/landingpage/index.html
@@ -12,7 +12,7 @@
     <title>Cover Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="{% static '/landingpage/bootstrap.min.css' %}"rel="stylesheet">
+    <link href="{% static '/css/bootstrap.min.css' %}"rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="{% static '/landingpage/landingcover.css' %}"rel="stylesheet">
