change some text and layout

--- a/templates/landingpage/index.html
+++ b/templates/landingpage/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Cover Template for Bootstrap</title>
+    <title>One Apply</title>
 
     <!-- Bootstrap core CSS -->
     <link href="{% static '/css/bootstrap.min.css' %}"rel="stylesheet">
@@ -30,8 +30,6 @@
             <div class="inner">
               <h3 class="masthead-brand">OneApply</h3>
               <nav class="nav nav-masthead">
-                <a class="nav-link active" href="#">Home</a>
-                <a class="nav-link" href="#">Features</a>
                 <a class="nav-link" href="#">Log in</a>
               </nav>
             </div>
@@ -39,10 +37,10 @@
 
           <div class="inner cover">
             <h1 class="cover-heading">OneApply</h1>
-            <p class="lead">OneApply Description</p>
+            <p class="lead">Apply your dream high school today!</p>
             <p class="lead">
-              <a href="#" class="btn btn-lg btn-secondary">Student/Parents Sign up</a>
-              <a href="#" class="btn btn-lg btn-secondary">Admission Staff Sign up</a>
+              <a href="#" class="btn btn-lg btn-secondary">Student/Parents</a>
+              <a href="#" class="btn btn-lg btn-secondary">Admission Staff</a>
             </p>
           </div>
 
