i leave onclick as empty. waiting Abe fill it

--- a/templates/landingpage/index.html
+++ b/templates/landingpage/index.html
@@ -39,7 +39,7 @@
             <div class="carousel-caption d-none d-md-block text-left">
               <h1>Student</h1>
               <p>Students can search their dream high school, check the school's information, and submit their application</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">I'm student</a></p>
+              <p><a class="btn btn-lg btn-primary" onclick = "" role="button">I'm student</a></p>
             </div>
           </div>
         </div>
