--- a/templates/landingpage/index.html
+++ b/templates/landingpage/index.html
@@ -46,7 +46,7 @@
         <div class="carousel-item">
           <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
           <div class="container">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption d-none d-md-block text-left">
               <h1>Parents</h1>
               <p>Parents can search their dream high school, check the school's information, and submit their application</p>
               <p><a class="btn btn-lg btn-primary" href="#" role="button">I'm parent</a></p>
@@ -56,7 +56,7 @@
         <div class="carousel-item">
           <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
           <div class="container">
-            <div class="carousel-caption d-none d-md-block text-right">
+            <div class="carousel-caption d-none d-md-block text-left">
               <h1>Admission Staff</h1>
               <p>Admission staff can view students' application.</p>
               <p><a class="btn btn-lg btn-primary" href="#" role="button">I'm admission staff'</a></p>
@@ -101,11 +101,11 @@
       <hr class="featurette-divider">
 
       <div class="row featurette">
-        <div class="col-md-7 push-md-5">
+        <div class="col-md-7">
           <h2 class="featurette-heading">Parents<span class="text-muted"></span></h2>
           <p class="lead"></p>
         </div>
-        <div class="col-md-5 pull-md-7">
+        <div class="col-md-5">
           <img class="featurette-image img-fluid mx-auto" src="{% static '/landingpage/parents.jpeg' %}" alt="Generic placeholder image">
         </div>
       </div>
