--- a/templates/landingpage/index.html
+++ b/templates/landingpage/index.html
@@ -36,8 +36,9 @@
     <div class="carousel-inner" role="listbox">
         <div class="carousel-item active">
             <img class="first-slide"
-                 src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
+                 src="{% static 'landingpage/images/bg_1.jpg' %}"
                  alt="First slide">
+{#            <div class="blur-bg"></div>#}
             <div class="container">
                 <div class="carousel-caption d-none d-md-block text-left">
                     <h1>Student/Parent</h1>
@@ -49,8 +50,9 @@
 
         <div class="carousel-item">
             <img class="third-slide"
-                 src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
+                 src="{% static 'register/images/bg_1.jpg' %}"
                  alt="Third slide">
+{#            <div class="blur-bg"></div>#}
             <div class="container">
                 <div class="carousel-caption d-none d-md-block text-left">
                     <h1>Admission Staff</h1>
