--- a/templates/landingpage/index.html
+++ b/templates/landingpage/index.html
@@ -50,7 +50,7 @@
 
         <div class="carousel-item">
             <img class="third-slide"
-                 src="{% static 'register/images/bg_1.jpg' %}"
+                 src=""
                  alt="Third slide">
 {#            <div class="blur-bg"></div>#}
             <div class="container">
