PR 43 review changes

--- a/templates/landingpage/index.html
+++ b/templates/landingpage/index.html
@@ -49,6 +49,7 @@
         </div>
 
         <div class="carousel-item">
+{#            TODO - add a background image url#}
             <img class="third-slide"
                  src=""
                  alt="Third slide">
