--- a/register/templates/register/index.html
+++ b/register/templates/register/index.html
@@ -11,7 +11,7 @@
                 <h1 class="h3 font-weight-normal" style="margin-bottom: 20px;">Do we know you?</h1>
                 <h4 class="h5 font-weight-light" style="text-align: justify;margin: 40px 10px 20px 10px;">If you're a high school kid (or a concerned guardian) starting your application process for the upcoming High School admission window and do not want the hassle of a big-yellow-book ...start with OneApply.</h4>
                 <h4 class="h5 font-weight-light" style="text-align: justify;margin: 40px 10px 40px 10px;">OneApply is a one stop application portal which provides you with cool features like - sorting your high schools by boroughs, by their programs, their locations, adding them to the cart, one-click apply and more.</h4>
-                <button class="btn btn-outline-light mt-3" onclick="location.href={% url 'logIn:login_user' %}">Your account</button>
+                <button class="btn btn-outline-light mt-3" onclick="location.href={% url 'logIn:login_user' 1%}">Your account</button>
             </div>
         </div>
         <div class="col-md-8 right-pane">
