two blur images

--- a/templates/landingpage/index.html
+++ b/templates/landingpage/index.html
@@ -51,7 +51,7 @@
         <div class="carousel-item">
 {#            TODO - add a background image url#}
             <img class="third-slide"
-                 src=""
+                 src="{% static 'landingpage/images/bg_4.jpg' %}"
                  alt="Third slide">
 {#            <div class="blur-bg"></div>#}
             <div class="container">
