update for registration for adminstaff

--- a/templates/landingpage/index.html
+++ b/templates/landingpage/index.html
@@ -43,7 +43,9 @@
                 <div class="carousel-caption d-none d-md-block text-left">
                     <h1>Student/Parent</h1>
                     <p>In search of your dream high school? Start now.</p>
-                    <p><a class="btn btn-lg btn-primary" onclick="location.href={% url 'logIn:login_user' %}" role="button">Begin here</a></p>
+                    <a href="{% url 'logIn:login_user' 0 %}"><button class="btn btn-lg btn-primary">Begin Here</button></a>
+
+{#                    <p><a class="btn btn-lg btn-primary" onclick="location.href={% url 'logIn:login_user' 0 %}" role="button">Begin here</a></p>#}
                 </div>
             </div>
         </div>
@@ -58,7 +60,10 @@
                 <div class="carousel-caption d-none d-md-block text-left">
                     <h1>Admission Staff</h1>
                     <p>Looking to manage millions of applications? Start now.</p>
-                    <p><a class="btn btn-lg btn-primary" href="#" role="button">Begin here</a></p>
+{#                    <p>#}
+                    <a href="{% url 'logIn:login_user' 1 %}"><button class="btn btn-lg btn-primary">Begin Here</button></a>
+{#                    <a class="btn btn-lg btn-primary" onclick="location.href={% url 'logIn:login_user' 1 %}" role="button">Begin here</a>#}
+{#                    </p>#}
                 </div>
             </div>
         </div>
