--- a/dashboard/templates/dashboard/student.html
+++ b/dashboard/templates/dashboard/student.html
@@ -1,10 +1,10 @@
 
 {% load staticfiles %}
 <!-- Bootstrap core CSS -->
-<link href="{% static '/css/bootstrap.min.css' %}" rel="stylesheet">
+<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 
 <!-- Custom styles for this template -->
-<link href="{% static '/dashboard/blog.css' %}" rel="stylesheet">
+<link href="{% static 'dashboard/blog.css' %}" rel="stylesheet">
 
 
 
