--- a/dashboard/templates/dashboard/student.html
+++ b/dashboard/templates/dashboard/student.html
@@ -6,8 +6,10 @@
 <!-- Custom styles for this template -->
 <link href="{% static 'dashboard/blog.css' %}" rel="stylesheet">
 
+<!--script-->
+<script src="//cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
 
-
+<script src="//cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 
   <nav class="navbar navbar-expand-md navbar-dark bg-primary mb-4">
@@ -28,19 +30,27 @@
 
   <div class="nav-scroller py-1 mb-2">
     <nav class="nav d-flex justify-content-between">
-      <a class="p-2 text-muted" href="#" >Selected Schools</a>
-      <a class="p-2 text-muted" href="#">A schools</a>
-      <a class="p-2 text-muted" href="#">Application forms</a>
-      <a class="p-2 text-muted" href="#">Teacher Recommendations</a>
+      <a class="p-2 text-muted active" href="#selected-schools" data-toggle="tab">Selected Schools</a>
+      <a class="p-2 text-muted" href="#all_schools" data-toggle="tab">All schools</a>
+      <a class="p-2 text-muted" href="#application_forms" data-toggle="tab">Application forms</a>
+      <a class="p-2 text-muted" href="#teacher_recommendations" data-toggle="tab">Teacher Recommendations</a>
      
     </nav>
   </div>
- 
- <div class = "container">
- 	<h1>Hello, we remember you!
- 	Welcome back!</h1>
- </div>
-
+ <div id="myTabContent" class="tab-content">
+    <div class = "active tab-pane" id="selected_schools">
+ 	    <h1>Hello, this is selected schools page</h1>
+    </div>
+    <div class = "tab-pane" id="all_schools">
+        <h1>Hello, this is all shcools page</h1>
+    </div>
+    <div class = "tab-pane", id="application_forms">
+ 	    <h1>Hello, this is application forms page</h1>
+    </div>
+    <div class= "tab-pane" id="teacher_recommendations">
+        <h1>Hello, this is teacher recommendations page</h1>
+    </div>
+</div>
 <footer class="blog-footer">
   <p>
     <a href="#">Back to top</a>
