id does not match fixed

--- a/dashboard/templates/dashboard/admissionstaff.html
+++ b/dashboard/templates/dashboard/admissionstaff.html
@@ -35,7 +35,7 @@
     </nav>
   </div>
  <div id="myTabContent" class="tab-content">
-    <div class = "active tab-pane" id="student-applications">
+    <div class = "active tab-pane" id="student_applications">
  	    <h1>Hello, this is student applications page</h1>
     </div>
     <div class = "tab-pane" id="school_informations">
