--- a/dashboard/templates/dashboard/student.html
+++ b/dashboard/templates/dashboard/student.html
@@ -30,7 +30,7 @@
 
   <div class="nav-scroller py-1 mb-2">
     <nav class="nav d-flex justify-content-between">
-      <a class="p-2 text-muted active" href="#selected-schools" data-toggle="tab">Selected Schools</a>
+      <a class="p-2 text-muted active" href="#selected_schools" data-toggle="tab">Selected Schools</a>
       <a class="p-2 text-muted" href="#all_schools" data-toggle="tab">All schools</a>
       <a class="p-2 text-muted" href="#application_forms" data-toggle="tab">Application forms</a>
       <a class="p-2 text-muted" href="#teacher_recommendations" data-toggle="tab">Teacher Recommendations</a>
