high school UI, graduation_rate fix, overview added

--- a/static/high_schools/css/high_school.css
+++ b/static/high_schools/css/high_school.css
@@ -12,16 +12,21 @@ body {
   background-color: #f5f5f5;
 }
 
+.all-school-root{
+  width: 100%;
+}
+
 .left-pane{
-  height: 100vh;
+  height: 100vh !important;
+  /*background-color: #95a5a6;*/
   background-color: whitesmoke;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .right-pane{
-  background: white url("../images/bg_4.jpg") no-repeat;
-  background-size: cover;
+  background-color: whitesmoke;
   height: 100vh;
-  color: white;
 }
 
 .blur-bg{
@@ -35,94 +40,24 @@ body {
 
 .right-pane-container{
   position: absolute;
-  top: 100px;
-  margin: 0 40px;
+  top: 7.5%;
+  margin: 5% 7.5%;
+  width: 80%;
 }
 
-.form-signin {
-  width: 100%;
-  max-width: 420px;
-  padding: 15px;
-  margin: auto;
+.right-pane .top-header{
+  height: 40%;
+  max-height: 45%;
+  /*background: url("../../logIn/images/bg_1.jpg");*/
+  /*background-size: cover;*/
 }
+/*overriding bootstrap*/
 
-.form-label-group {
-  position: relative;
-  margin-bottom: 1rem;
-}
-
-.form-label-group > input,
-.form-label-group > label {
-  height: 3.125rem;
-  padding: .75rem;
-}
-
-.form-label-group > label {
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: block;
-  width: 100%;
-  margin-bottom: 0; /* Override default `<label>` margin */
-  line-height: 1.5;
-  color: #495057;
-  pointer-events: none;
-  cursor: text; /* Match the input under the label */
-  border: 1px solid transparent;
-  border-radius: .25rem;
-  transition: all .1s ease-in-out;
-}
-
-.form-label-group input::-webkit-input-placeholder {
-  color: transparent;
-}
-
-.form-label-group input:-ms-input-placeholder {
-  color: transparent;
-}
-
-.form-label-group input::-ms-input-placeholder {
-  color: transparent;
-}
-
-.form-label-group input::-moz-placeholder {
-  color: transparent;
-}
-
-.form-label-group input::placeholder {
-  color: transparent;
-}
-
-.form-label-group input:not(:placeholder-shown) {
-  padding-top: 1.25rem;
-  padding-bottom: .25rem;
-}
-
-.form-label-group input:not(:placeholder-shown) ~ label {
-  padding-top: .25rem;
-  padding-bottom: .25rem;
-  font-size: 12px;
-  color: #777;
-}
-
-/* Fallback for Edge
--------------------------------------------------- */
-@supports (-ms-ime-align: auto) {
-  .form-label-group > label {
-    display: none;
-  }
-  .form-label-group input::-ms-input-placeholder {
-    color: #777;
-  }
-}
-
-/* Fallback for IE
--------------------------------------------------- */
-@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-  .form-label-group > label {
-    display: none;
-  }
-  .form-label-group input:-ms-input-placeholder {
-    color: #777;
-  }
-}
+ .list-group-item{
+   width: 85% !important;
+   margin: 5% 7.5% 0% 7.5% !important;
+   border-radius: 10px;
+ }
+ .list-group-item:last-child{
+   margin-bottom: 5% !important;
+ }
