--- a/high_school/templates/high_school/index.html
+++ b/high_school/templates/high_school/index.html
@@ -5,30 +5,26 @@
     <title>OneApply</title>
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'high_schools/css/high_school.css' %}">
+    <script src="https://kit.fontawesome.com/fc24e2383c.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-md-7 left-pane">
-            <div class="list-group">
-                {% for school in high_schools %}
-                    <a href="#" class="list-group-item list-group-item-action active">
-                        <div class="d-flex w-100 justify-content-between">
-                            <h5 class="mb-1">{{ school.school_name }}</h5>
-                            <small>{{ school.start_time }} - {{ school.end_time }}</small>
-                        </div>
-                        <p class="mb-1">{{ school.overview_paragraph }}</p>
-                        <small>{{ school.location }}</small>
-                    </a>
-                    <div class="mb-5"></div>
-                {% endfor %}
+<div class="all-school-root">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-6 left-pane">
+                {% block school_list %}
+                {% include 'high_school/school_list.html' %}
+                {% endblock %}
             </div>
-        </div>
-        <div class="col-md-5 right-pane">
+            <div class="col-md-6 right-pane">
+                {% block school_overview %}
+                    {% include 'high_school/school_overview.html' %}
+                {% endblock %}
+            </div>
         </div>
     </div>
 </div>
-
 {% block content %}
 {% endblock %}
 </body>
