--- a/templates/landingpage/index.html
+++ b/templates/landingpage/index.html
@@ -72,8 +72,7 @@
             <div class="container">
                 <div class="carousel-caption justify-content-center d-flex h-50 d-md-block text-left">
                     <h1>Teacher and Mentor</h1>
-                    <p>Submit your letter now</p>
-                    <a href="{% url 'logIn:login_user' constant_ut_adminStaff %}"><button class="btn btn-lg btn-primary">Begin Here</button></a>
+                    <p>Write Recommendations</p>
                 </div>
             </div>
         </div>
@@ -115,9 +114,7 @@
                  alt="Generic placeholder image">
         </div>
     </div>
-
     <hr class="featurette-divider">
-
     <div class="row featurette">
         <div class="col-md-7">
             <h2 class="featurette-heading">Admission Staff<span class="text-muted"></span></h2>
@@ -130,15 +127,12 @@
                  alt="Generic placeholder image">
         </div>
     </div>
-
     <!-- FOOTER -->
 	<footer class="page-footer font-small blue">
   		<div class="footer-copyright text-center py-5">
   		</div>
 	</footer>
 </div><!-- /.container -->
-
-
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
@@ -150,9 +144,5 @@
         integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
         crossorigin="anonymous"></script>
 <script src="{% static '/js/bootstrap.min.js'%}"></script>
-<!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-<!--script src="../../assets/js/vendor/holder.min.js"></script>
-<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-<!--script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
 </body>
 </html>
